fixed footer spacing on contact.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -449,6 +449,7 @@ main {
 
 .contact-us-form {
     color: #ffe6c7;
+    margin-bottom: 30px;
 }
 
 .contact-us {
